2007-09-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.26 released.

        * More changes 'require menu_cfg' to reflect FullAuto architecture

2007-09-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.25 released.

        * Bug Fix - %{$LookUpMenuName} was not being populated properly
                    when using multiple menus defined in main:: and
                    not a separate menu_cfg.pm file.

2007-08-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.24 released.

        * Changed 'require menu_cfg' to reflect FullAuto architecture

2007-08-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.23 released.

        * More POD documentation and README tweaks in preparation
          for the initial roll-out of Net::FullAuto

2007-08-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.22 released.

        * Tweaked the POD documentation so that all examples
          listed will print output to the console. This was
          a potentially confusing omission.

2007-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.21 released.

        * Added error checking to trap and inform users of possible
          configuration errors in menu blocks.

        * Made changes in preparation for the release of Net::FullAuto,
          for which Term::Menus is a required module.


2007-05-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.20 released.

        * Repaired "Clear All" to actually clear all selections after
          "Select All" was used.

2006-08-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.19 released.

        * No Changes to Term::Menus - Repaired CPAN distribution

2006-08-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.18 released.

        * Added ability to call custom subroutine to create Text Items