@@ -1,5 +1,11 @@
 2007-09-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 1.27 released.
+
+        * More changes 'require menu_cfg' to reflect FullAuto architecture
+
+2007-09-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 1.26 released.
 
         * More changes 'require menu_cfg' to reflect FullAuto architecture
